--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 .btn {
-  @apply text-white bg-[#8a4af3] rounded-md shadow-md mt-[30px] p-3;
+  @apply text-white bg-[#8a4af3] rounded-md shadow-md mt-[30px] p-3 hover:bg-orange-400 hover:text-black hover:scale-[1.1] ease-in duration-100 cursor-pointer;
 }
 
 .product_img {
